Cambios en textos de algunos templates de usuarios
Inicio de sesión entre otros

--- a/holamundo/templates/account/logout.html
+++ b/holamundo/templates/account/logout.html
@@ -1,7 +1,7 @@
 {% extends "account/base.html" %}
 {% load static %}
 {% load i18n %}
-{% block title %}{% trans "Sign Out" %}{% endblock title %}
+{% block title %}{% trans "Cerrar Sesión" %}{% endblock title %}
     
 {% block content %}
                     <div class="card overflow-hidden">
