--- a/holamundo/templates/account/password_change.html
+++ b/holamundo/templates/account/password_change.html
@@ -39,7 +39,7 @@
                                             {{ form.password2|as_crispy_field }}
                                         </div>
                                         <div class="mt-4">
-                                            <button class="btn btn-success w-100" type="submit">{% trans "Change Password" %}</button>
+                                            <button class="btn btn-success w-100" type="submit">{% trans "Cambiar Constraseña" %}</button>
                                         </div>
                                     </form>
                                     
