--- a/holamundo/templates/account/password_reset.html
+++ b/holamundo/templates/account/password_reset.html
@@ -5,12 +5,12 @@
 {% load account socialaccount %}
 {% load crispy_forms_tags %}
 
-{% block title %}{% trans "Password Reset" %}{% endblock %}
+{% block title %}{% trans "Restablecimiento de contraseña" %}{% endblock %}
 {% block content %}
                         <div class="card overflow-hidden">
                             <div class="bg-primary">
                                 <div class="text-primary text-center p-4">
-                                    <h5 class="text-white font-size-20 p-2">Reset Password</h5>
+                                    <h5 class="text-white font-size-20 p-2">Restablecimiento de contraseña</h5>
                                     <a href="{% url 'dashboard' %}" class="logo logo-admin">
                                         <img src="{% static 'images/LOGO.png' %}" height="75" alt="logo">
                                     </a>
@@ -20,7 +20,7 @@
                             <div class="card-body p-4">
                                 <div class="p-3">
                                     <div class="alert alert-success mt-5" role="alert">
-                                        Enter your Email and instructions will be sent to you!
+                                        ¡Ingrese su correo electrónico y se le enviarán las instrucciones!
                                     </div>
                                     <form class="needs-validation mt-4" novalidate method="POST" action="{% url 'account_reset_password' %}">
                                         {% for message in messages %}
@@ -40,7 +40,7 @@
                 
                                         <div class="row  mb-0">
                                             <div class="col-12 text-end">
-                                                <button class="btn btn-primary w-md waves-effect waves-light" type="submit">Reset</button>
+                                                <button class="btn btn-primary w-md waves-effect waves-light" type="submit">Enviar</button>
                                             </div>
                                         </div>
     
@@ -52,8 +52,8 @@
                         </div>
     
                         <div class="mt-5 text-center">
-                            <p>Remember It ? <a href="{% url 'account_login' %}" class="fw-medium text-primary"> Sign In here </a> </p>
-                            <p class="mb-0">© <script>document.write(new Date().getFullYear())</script> Veltrix. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesdesign</p>
+                            <p>Tiene cuenta? <a href="{% url 'account_login' %}" class="fw-medium text-primary"> Ingresa aca </a> </p>
+                            <p class="mb-0">© <script>document.write(new Date().getFullYear())</script> Consorcio Jurídico Efren <i class="mdi mdi-heart text-danger"></i> by JDA</p>
                         </div>
 
 {% endblock content %}
