--- a/holamundo/templates/account/password_reset_from_key.html
+++ b/holamundo/templates/account/password_reset_from_key.html
@@ -2,15 +2,14 @@
 {% load static %}
 {% load i18n %}
 {% load crispy_forms_tags %}
-{% block title %}{% trans "Change Password" %}{% endblock title %}
+{% block title %}{% trans "Cambie contraseña" %}{% endblock title %}
     
 {% block content %}
 
                 <div class="card overflow-hidden">
                     <div class="bg-primary">
                         <div class="text-primary text-center p-4">
-                            <h5 class="text-white font-size-20">Password Reset Key</h5>
-                            <p class="text-white-50">Get your free Veltrix account now.</p>
+                            <h5 class="text-white font-size-20">Clave de restablecimiento de contraseña</h5>
                             <a href="{% url 'dashboard' %}" class="logo logo-admin">
                                 <img src="{% static 'images/LOGO.png' %}" height="75" alt="logo">
                             </a>
@@ -22,7 +21,7 @@
                         <div class="mt-4">
                             {% if token_fail %}
                                 {% url 'account_reset_password' as passwd_reset_url %}
-                                <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
+                                <p>{% blocktrans %}El enlace para restablecer la contraseña no era válido, posiblemente porque ya se había utilizado. Por favor solicite un <a href="{{ passwd_reset_url }}">Nueva contraseña restablecida</a>.{% endblocktrans %}</p>
                             {% else %}
                                 {% if form %}
                                     <form class="needs-validation" novalidate method="POST" action="{{ action_url }}">
@@ -44,17 +43,17 @@
                                             {{ form.password2|as_crispy_field }}
                                         </div>
                                         <div class="mt-4">
-                                            <button class="btn btn-success w-100" type="submit">{% trans 'change password' %}</button>
+                                            <button class="btn btn-success w-100" type="submit">{% trans 'cambiar contraseña' %}</button>
                                         </div>
                                     </form>
                                 {% else %}
-                                    <p class="test-muted">{% trans 'Your password is now changed.' %}</p>
+                                    <p class="test-muted">{% trans 'Tu contraseña esta restablecida.' %}</p>
                                 {% endif %}
                             {% endif %}
                         </div>
 
                         <div class="mt-5 text-center">
-                            <p class="mb-0">Back to the homepage ? <a href="{% url 'dashboard' %}" class="fw-semibold text-primary text-decoration-underline"> Click here </a> </p>
+                            <p class="mb-0">Volver al menu ? <a href="{% url 'dashboard' %}" class="fw-semibold text-primary text-decoration-underline"> Click aca </a> </p>
                         </div>
                     </div>
                 </div>
