--- a/holamundo/templates/account/email_confirm.html
+++ b/holamundo/templates/account/email_confirm.html
@@ -3,14 +3,13 @@
 {% load i18n %}
 {% load account %}
 {% load crispy_forms_tags %}
-{% block title %}{% trans "Confirm E-mail Address" %}{% endblock %}
+{% block title %}{% trans "Confirmar tu correo electrónico" %}{% endblock %}
 {% block content %}
 
                         <div class="card overflow-hidden">
                             <div class="bg-primary">
                                 <div class="text-primary text-center p-4">
-                                    <h5 class="text-white font-size-20">Email-Confirm</h5>
-                                    <p class="text-white-50">Get your free Veltrix account now.</p>
+                                    <h5 class="text-white font-size-20">Confirmar correo</h5>
                                     <a href="{% url 'dashboard' %}" class="logo logo-admin">
                                         <img src="{% static 'images/logo-sm.png' %}" height="24" alt="logo">
                                     </a>
@@ -18,12 +17,12 @@
                             </div>
                             <div class="p-lg-5 p-4 text-center">
                                 <div class="mt-4">
-                                    <h4>{% trans "Confirm E-mail Address" %} !</h4>
+                                    <h4>{% trans "Confirma tu correo electrónico" %} !</h4>
                                     {% if confirmation %}
 
                                         {% user_display confirmation.email_address.user as user_display %}
 
-                                        <p>{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
+                                        <p>{% blocktrans with confirmation.email_address.email as email %}Confirme que <a href="mailto:{{ email }}">{{ email }}</a> es una dirección de correo electrónico para el usuario {{ user_display }}.{% endblocktrans %}</p>
 
                                         <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
                                         {% csrf_token %}
