--- a/holamundo/templates/account/password_reset_from_key_done.html
+++ b/holamundo/templates/account/password_reset_from_key_done.html
@@ -1,14 +1,14 @@
 {% extends 'account/base.html' %}
 {% load static %}
 {% load i18n %}
-{% block title %}{% trans "Change Password" %}{% endblock title %}
+{% block title %}{% trans "Cambiar Constraseña" %}{% endblock title %}
 {% block content %}
                 
                 <div class="card overflow-hidden">
                     <div class="bg-primary">
                         <div class="text-primary text-center p-4">
-                            <h5 class="text-white font-size-20">Password Reset Key Done</h5>
-                            <p class="text-white-50">Get your free Veltrix account now.</p>
+                            <h5 class="text-white font-size-20">Clave de restablecimiento de contraseña hecha</h5>
+                            
                             <a href="{% url 'dashboard' %}" class="logo logo-admin">
                                 <img src="{% static 'images/LOGO.png' %}" height="75" alt="logo">
                             </a>
@@ -16,15 +16,15 @@
                     </div>
                     <div class="p-lg-5 p-4 text-center">
                         <div class="mt-4">
-                            <h4>{% trans "Change Password" %}</h4>
+                            <h4>{% trans "Cambiar Constraseña" %}</h4>
                             {% for message in messages %}
                             <div class="alert {{ message.tags }} mb-4" role="alert">
                                 <strong>{{ message }}</strong>
                             </div>
                             {% endfor %} 
-                            <p class="text-muted mx-4">{% trans 'Your password is now changed.' %}</p>
+                            <p class="text-muted mx-4">{% trans 'Su contraseña ahora ha sido cambiada.' %}</p>
                             <div class="mt-4">
-                                <a href="{% url 'dashboard' %}" class="btn btn-success w-100">Back to Dashboard</a>
+                                <a href="{% url 'dashboard' %}" class="btn btn-success w-100">Vuelve al Dashboard</a>
                                 
                             </div>
                         </div>
