--- a/holamundo/templates/partials/sidebar.html
+++ b/holamundo/templates/partials/sidebar.html
@@ -108,13 +108,13 @@
 
 
                         <a href="{% url 'dashboard' %}" class="waves-effect">
-                            <i class="ti-home"></i><span class="badge rounded-pill bg-primary float-end">1</span>
+                            <i class="ti-home"></i><span class="badge rounded-pill bg-primary float-end"></span>
                             <span key="Dashboard">Dashboard</span>
                             
                         </a>
                         
                         <a href="{% url 'lista_abogados' %}" class="waves-effect">
-                            <i class="ti-home"></i><span class="badge rounded-pill bg-primary float-end">1</span>
+                            <i class="ti-home"></i><span class="badge rounded-pill bg-primary float-end"></span>
                             <span key="Dashboard">Abogado</span>
                         
 
