--- a/holamundo/templates/partials/sidebar.html
+++ b/holamundo/templates/partials/sidebar.html
@@ -20,13 +20,13 @@
 
 
                     <a href="{% url 'dashboard' %}" class="waves-effect">
-                        <i class="ti-home"></i><span class="badge rounded-pill bg-primary float-end">1</span>
+                        <i class="ti-home"></i><span class="badge rounded-pill bg-primary float-end"></span>
                         <span key="Dashboard">Dashboard</span>
                         
                     </a>
    
                     <a href="{% url 'ver_abogado' %}" class="waves-effect">
-                        <i class="ti-home"></i><span class="badge rounded-pill bg-primary float-end">1</span>
+                        <i class="ti-home"></i><span class="badge rounded-pill bg-primary float-end"></span>
                         <span key="Dashboard">Abogado</span>
                     </a>
     
