--- a/holamundo/templates/partials/sidebar.html
+++ b/holamundo/templates/partials/sidebar.html
@@ -71,7 +71,7 @@
                         
                     </ul>
                     <ul class="sub-menu" aria-expanded="false">
-                        <li><a href="{% url 'registrar_caso' %}" key="crudcasos">Editar casos</a></li>
+                        <li><a href="{% url 'registrar_caso' %}" key="crudcasos">Registrar casos</a></li>
                         
                     </ul>
                 </li>
