--- a/holamundo/templates/partials/sidebar.html
+++ b/holamundo/templates/partials/sidebar.html
@@ -128,7 +128,7 @@
                         </a>
                         <ul class="sub-menu" aria-expanded="false">
                             <li><a href="{% url 'subir_documento' %}" key="subir_documento">Subir Documento</a></li>
-                            <li><a href="{% url 'lista_documentos' %}" key="ver_documento">Ver Documento</a></li>
+                            <li><a href="{% url 'ver_casos_cliente_doc' %}" key="ver_documento">Ver Documento</a></li>
                             
                         </ul>
                     </li>
