--- a/holamundo/templates/lista_documentos.html
+++ b/holamundo/templates/lista_documentos.html
@@ -29,6 +29,7 @@
                 <th scope="col">Caso</th>
                 <th scope="col">Tipo de documento</th>
                 <th scope="col">Descripción</th>
+                <th scope="col">Archivo</th>
             </tr>
         </thead>
         {% for documento in documentos %}
@@ -37,6 +38,13 @@
                 <td>{{documento.caso}}</td>
                 <td>{{documento.tipo_documento}}</td>
                 <td>{{documento.descripcion_documento}}</td>
+                <td>
+                    {% if documento.archivo_adjunto %}
+                        <a href="{{ documento.archivo_adjunto.url }}" download>Descargar</a>
+                    {% else %}
+                        No disponible
+                    {% endif %}
+                </td>
                 <td>
                     <div>
                         <a href="{% url 'ver_documento' codigo_documento=documento.id %}" class="btn btn-primary">Ver Detalles</a>
