--- a/holamundo/templates/abogado_editar_documento.html
+++ b/holamundo/templates/abogado_editar_documento.html
@@ -55,7 +55,7 @@
                                     </div>
                                 </div>
                                 <button type="submit" class="btn btn-primary">Guardar Cambios</button>
-                                <a href="{%url 'ver_documentos_abogado' %}" class="btn btn-secondary">Volver a Detalles</a> 
+                                <a href="{%url 'ver_documentos' caso_id=caso_id  %}" class="btn btn-secondary">Volver a Detalles</a> 
                             </div>
                             
                         </div>
