--- a/holamundo/templates/ver_documento.html
+++ b/holamundo/templates/ver_documento.html
@@ -40,12 +40,14 @@
                             </tr>
                             <tr>
                                 <td >
-                                    <form method="post" action="{documento.get_delete_url}">
-                                     
+                                    <form method="post" enctype="multipart/form-data">
                                         {% csrf_token %}
-                                    <button type="submit" class="btn btn-danger">Eliminar</button>
+                                        <input type="hidden" name="documento_id" value="{{ documento.id }}">
+                                        <a href="/editar_documento/{{documento.id}}">Editar</a>
+                                        <button type="submit" formaction="{% url 'eliminar_documento' codigo_documento=documento.id %}" class="btn btn-danger">Eliminar</button>
                                     </form>
                                 </td>
+
                                 <td colspan="2">
                                     
                                         <a href='/editar_documento/{{documento.id}}' class="btn btn-primary">Editar</a>
