--- a/holamundo/templates/abogado_ver_casoC.html
+++ b/holamundo/templates/abogado_ver_casoC.html
@@ -49,6 +49,10 @@
                                     <button type="submit" class="btn btn-danger">Eliminar</button>
                                     </form>
                                 </td>
+                                <td>
+                                    <a href="{% url 'actualizar_descripcion_caso' caso_id=caso.id %}">Actualizar Descripción</a>
+        
+                                </td>
                                 <td colspan="2">
                                     
                                         <a href='/editar_caso_abogado/{{caso.id}}' class="btn btn-primary">Editar</a>
