--- a/holamundo/templates/abogado_ver_casoC.html
+++ b/holamundo/templates/abogado_ver_casoC.html
@@ -51,7 +51,7 @@
                                 </td>
                                 <td>
                                     <a href="{% url 'actualizar_descripcion_caso' caso_id=caso.id %}">Actualizar Descripción</a>
-        
+                                    <a href="{% url 'historial_caso' caso_id=caso.id %}">Ver Detalles del Caso</a>
                                 </td>
                                 <td colspan="2">
                                     
