--- a/holamundo/templates/historial_caso.html
+++ b/holamundo/templates/historial_caso.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'partials/base.html' %}
+{% load static %}
+
 
 {% block content %}
   <h2>Detalles del Caso</h2>
@@ -31,7 +33,7 @@
   <h3>Historial de Actualizaciones</h3>
   <table class="table">
     <thead>
-      <tr>
+      <tr>  
         <th>Actualización</th>
       </tr>
     </thead>
