--- a/holamundo/templates/historial_caso.html
+++ b/holamundo/templates/historial_caso.html
@@ -3,7 +3,11 @@
 
 
 {% block content %}
+<div>
   <h2>Detalles del Caso</h2>
+  <a href="{%url 'clientes_con_casos'%}" class="btn btn-secondary">Volver </a>
+</div>  
+
 
   <!-- Resto de la información del caso -->
   <table class="table">
